samples/_failures_safe/1761326026_255ea2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c173d3f.c: In function ‘main’:
./samples/SAFE/__tmp_3c173d3f.c:147:13: error: expected declaration or statement at end of input
  147 |             fprintf(stderr, "Error: Invalid operation choice\n");
      |             ^~~~~~~
./samples/SAFE/__tmp_3c173d3f.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3c173d3f.c:147:13: error: expected declaration or statement at end of input
